frame/support/test/tests/pallet_ui/trait_invalid_item.stderr
error: Invalid pallet::constant in pallet::config, expected type trait item
 --> $DIR/trait_invalid_item.rs:9:3
  |
9 |         const U: u8 = 3;
  |         ^^^^^
